--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <footer>
             <div>
                 <p>Please email us at</p>
-                <a href="https://www.email.mdhl.chihockey.org">mdhl@chihockey.org</a>
+                <a href="mailto:mdl@chihockey.org">mdhl@chihockey.org</a>
                 <p>We reply to your email as soon as we can</p>
             </div>
         </footer>
