--- a/contact.html
+++ b/contact.html
@@ -4,33 +4,49 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="assets/styles/style1.css"> -->
+        <!--<link rel="stylesheet" type="text/css" href="assets/styles/style2.css"> -->
+        <!--<link rel="stylesheet" type="text/css" href="assets/styles/style3.css"> -->
+        <link rel="icon" type="imag/x-icon" sizes="16x16" href="./assets/img/LogoMightyDuck-01.ico">
         <title>MDHL</title>
     </head>
     <body>
+        <header>
+            <h1 class="titulo">Mighty Ducks Hockey League</h1>
+        </header>
+
         <main>
-            <nav>
-                <a href="./index.html">Home</a>
-                <a href="./about.html">About MDHL</a>
-                <a href="#">Contact</a>
-            </nav>
-
-            <figure>
-                <img src="./img.email.files/LogoMightyDuck-01.png" alt="Logo" width="150">
-            </figure>
-
-            <h2>Mighty Ducks Hockey League</h2>
-
-            <figure>
-                <figcaption>Hockey Player for the Mighty Ducks team</figcaption>
-                <img src="./img.email.files/hockey3.jpg" alt="Hockey Players" width="500">
-            </figure>
-        </main>
-        <footer>
-            <div>
-                <p>Please email us at</p>
-                <a href="mailto:mdl@chihockey.org">mdhl@chihockey.org</a>
-                <p>We reply to your email as soon as we can</p>
+            <div class="banner">
+                <h2>Contact</h2>
             </div>
-        </footer>
+            
+            <figure>
+                <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo" width="150">
+            </figure>
+
+            <div class="nav_y_secciones">
+                <div>
+                    <nav>
+                        <a id="navegador2y3" href="./index.html">Home</a>
+                        <a id="navegador2y3" href="./about.html">About MDHL</a>
+                        <a id="navegador1" href="#">Contact</a>
+                    </nav>
+                </div>
+
+                <div>
+                    <section class="secciones">
+                        <p class="email">Please email us at</p>
+                        <a href="mailto:mdl@chihockey.org">mdhl@chihockey.org</a>
+                        <p>We reply to your email as soon as we can</p>
+                    </section>
+                </div>
+
+                <div>
+                    <figure>
+                        <img id="imagen3" src="./assets/img/hockey3.jpg" alt="Hockey Players" width="500">
+                    </figure>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
