--- a/contact.html
+++ b/contact.html
@@ -4,33 +4,37 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="assets/styles/style1.css">
+        <link rel="icon" type="imag/x-icon" sizes="16x16" href="./assets/img/LogoMightyDuck-01.ico">
         <title>MDHL</title>
     </head>
     <body>
-        <main>
+        <h1>Mighty Ducks Hockey League</h1>
+        <header class="headboard">
             <nav>
-                <a href="./index.html">Home</a>
-                <a href="./about.html">About MDHL</a>
-                <a href="#">Contact</a>
+                <a class="browsers2y3" href="./index.html">Home</a>
+                <a class="browsers2y3" href="./about.html">About MDHL</a>
+                <a class="browser1" href="#">Contact</a>
+                <a class="browsers2y3" href="./game-info.html">Game</a>
+                <a class="browsers2y3" href="./rules.html">Rules</a>
             </nav>
+        </header>
 
+        <main>
+                <h2>Contact</h2>
             <figure>
-                <img src="./img.email.files/LogoMightyDuck-01.png" alt="Logo" width="150">
+                <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
             </figure>
 
-            <h2>Mighty Ducks Hockey League</h2>
-
-            <figure>
-                <figcaption>Hockey Player for the Mighty Ducks team</figcaption>
-                <img src="./img.email.files/hockey3.jpg" alt="Hockey Players" width="500">
-            </figure>
-        </main>
-        <footer>
-            <div>
-                <p>Please email us at</p>
-                <a href="mailto:mdl@chihockey.org">mdhl@chihockey.org</a>
+            <div class="sections">
+                <p>Please email us at </p>
+                <p><a href="mailto:mdl@chihockey.org">mdhl@chihockey.org</a></p>
                 <p>We reply to your email as soon as we can</p>
+                
+                <figure>
+                    <img id="picture3" src="./assets/img/hockey3.jpg" alt="Hockey Players">
+                </figure>
             </div>
-        </footer>
+        </main>
     </body>
 </html>
