--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
                 <a class="browser1" href="#">Contact</a>
                 <a class="browsers2y3" href="./game-info.html">Game</a>
                 <a class="browsers2y3" href="./rules.html">Rules</a>
+                <a class="browsers2y3" href="./registration.html">Registration</a>
             </nav>
         </header>
 
