--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
                 <a class="browsers2y3" href="./contact.html">Contact</a>
                 <a class="browsers2y3" href="./game-info.html">Game</a>
                 <a class="browsers2y3" href="./rules.html">Rules</a>
+                <a class="browsers2y3" href="./registration.html">Registration</a>
             </nav>  
         </header>
         <main>
