--- a/game-info.html
+++ b/game-info.html
@@ -20,6 +20,7 @@
                 <a class="browsers2y3" href="./contact.html">Contact</a>
                 <a class="browser1" href="#">Game</a>
                 <a class="browsers2y3" href="./rules.html">Rules</a>
+                <a class="browsers2y3" href="./registration.html">Registration</a>
             </nav>
         </header>
         <main>
@@ -34,6 +35,7 @@
                             <th> Teams</th>
                             <th>Location</th>
                             <th>Times</th>
+                            <th>Maps</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -42,55 +44,64 @@
                             <td> U1and U4</td>
                             <td>AJ Katzenmaier</td>
                             <td>9:30 a.m.</td>
+                            <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.6572038332497!2d-87.6312580853166!3d41.90022877922051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses!2sar!4v1675615908180!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                         </tr>
                         <tr>
                             <td>U3 and U2</td>
                             <td>Greenbay</td>
                             <td>1:00 p.m.</td>
+                            <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.022981686595!2d-87.64002218531604!3d41.913864679219344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1675616596805!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                         </tr>
                         <tr>
                             <td rowspan="2">9/08</td>
                             <td>U5 and U6</td>
                             <td>Howard A Yeager</td>
                             <td>9:30 a.m</td>
+                            <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2700626313876!2d-87.85606978529857!3d42.31543827918989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675616718480!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                         </tr>
                         <tr>
                             <td>U6 andU1</td>
                             <td>Marjorie P Hart</td>
                             <td>1:00 p.m.</td>
+                            <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2898393489745!2d-87.64816138531536!3d41.9296228792181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses!2sar!4v1675616820832!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                         </tr>
                         <tr>
                             <td rowspan="2">9/15</td>
                             <td>U2 and U4</td>
                             <td>North</td>
                             <td>9:30 a.m</td>
+                            <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.2511138598347!2d-87.84223048529765!3d42.337169279188416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fed26d3692cf5%3A0x8611023901d6c74a!2sEvelyn%20Alexander%20School%20(K-3)!5e0!3m2!1ses!2sar!4v1675617049586!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                         </tr>
                         <tr>
                             <td>U3 and U5</td>
                             <td>AJ Katzenmaier</td>
                             <td>1:00 p.m.</td>
+                            <td ><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.6572038332497!2d-87.6312580853166!3d41.90022877922051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses!2sar!4v1675615908180!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                         </tr>
                         <tr>
                             <td rowspan="2">9/22</td>
                             <td>U1 and U3</td>
                             <td>South</td>
                             <td>9:30 a.m</td>
+                            <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.1937089340836!2d-87.85678168529853!3d42.31706697918978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses!2sar!4v1675617221077!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                         </tr>
                         <tr>
                             <td>U2 and U6</td>
                             <td>Howard A Yeager</td>
                             <td>1:00 p.m.</td>
+                            <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2700626313876!2d-87.85606978529857!3d42.31543827918989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675616718480!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                         </tr>
                         <tr>
                             <td>9/29</td>
                             <td>U4 and U5</td>
                             <td>Greenbay</td>
                             <td>9:30 a.m</td>
+                            <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.022981686595!2d-87.64002218531604!3d41.913864679219344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1675616596805!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                         </tr>  
                     </tbody>
                 </table>
             </div>		 
-            <div class="sections">
+            <div class="sections_game">
                 <ul>
                     <li class="list_game">Facility Type: Outdoor</li>
                     <li class="list_game">Additional Information: If deemed necessary by MDHL 
