--- a/rules.html
+++ b/rules.html
@@ -20,6 +20,7 @@
                 <a class="browsers2y3" href="./contact.html">Contact</a>
                 <a class="browsers2y3" href="./game-info.html">Game</a>
                 <a class="browser1" href="#">Rules</a>
+                <a class="browsers2y3" href="./registration.html">Registration</a>
             </nav>
         </header>
         <main>
