--- a/registration.html
+++ b/registration.html
@@ -49,7 +49,7 @@
                         <fieldset class="birth_date_and_gender">
                             <div>
                                 <label for="birth_date">Birth Date</label>
-                                <input type="date" name="birth_date" id="birth_date" placeholder="11/01/1999" min="18" max="99" required>
+                                <input type="number" name="birth_date" id="birth_date" placeholder="01/01/1992" min="18" max="99" required>
                             </div>
                             <div>
                                 <fieldset>
@@ -196,7 +196,7 @@
                         <label for="name_parent">First and last name of parent/guardian:</label>
                         <input type="text" name="name_parent" id="name_parent" placeholder="Johon Stuart" required>
                         <label for="date">Date:</label>
-                        <input type="date" name="date" id="date" placeholder="11/01/2023" required>
+                        <input type="number" name="date" id="date" placeholder="11/01/2023" required>
                     </fieldset>
                     <input class="buttons" type="submit" value="Send">
                     <input class="buttons" type="reset" value="Reset">
