--- a/about.html
+++ b/about.html
@@ -22,10 +22,11 @@
         </header>
         <main>
                 <h2>About MDHL</h2>
-            <figure>
-                <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo" width="150">
-            </figure>
-            <div class="sections">
+            
+            <div class="sections_and_img">
+                <div class="box_logo">
+                    <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
+                </div>
                 <section>
                     <h3>Mision</h3>
                     <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
