--- a/contact.html
+++ b/contact.html
@@ -23,15 +23,15 @@
 
         <main>
                 <h2>Contact</h2>
-            <figure>
-                <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
-            </figure>
-
-            <div class="sections">
-                <p>Please email us at </p>
-                <p><a href="mailto:mdl@chihockey.org">mdhl@chihockey.org</a></p>
-                <p>We reply to your email as soon as we can</p>
-                
+            <div class="sections_and_img">
+                <div class="box_logo">
+                    <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
+                </div>
+                <div>
+                    <p>Please email us at </p>
+                    <p><a href="mailto:mdl@chihockey.org">mdhl@chihockey.org</a></p>
+                    <p>We reply to your email as soon as we can</p>
+                </div>
                 <figure>
                     <img id="picture3" src="./assets/img/hockey3.jpg" alt="Hockey Players">
                 </figure>
