--- a/game-info.html
+++ b/game-info.html
@@ -11,9 +11,6 @@
     <body>
         <h1>Mighty Ducks Hockey League</h1>
         <header class="headboard">
-            <figure>
-                <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
-            </figure>
             <nav>
                 <a class="browsers2y3" href="./index.html">Home</a>
                 <a class="browsers2y3" href="./about.html">About MDHL</a>
@@ -25,8 +22,17 @@
         </header>
         <main>
             <h2>Game Information</h2>
-            <h3 id="title_game">Fall Schedule</h3>
-            <p id="underlined_sentence_game">* All qames take place on Saturday.</p>
+            <div class="container_logo_game">
+                <div>
+                    <figure>
+                        <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
+                    </figure>
+                </div>
+                <div>
+                    <h3 id="subtitle_game">Fall Schedule</h3>
+                    <p id="underlined_sentence_game">* All qames take place on Saturday.</p>
+                </div>
+            </div>
             <div class="container_table">
                 <table>
                     <thead>
