--- a/rules.html
+++ b/rules.html
@@ -11,9 +11,6 @@
     <body>
         <h1>Mighty Ducks Hockey League</h1>
         <header class="headboard">
-            <figure>
-                <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
-            </figure>
             <nav>
                 <a class="browsers2y3" href="./index.html">Home</a>
                 <a class="browsers2y3" href="./about.html">About MDHL</a>
@@ -25,8 +22,11 @@
         </header>
         <main>
             <h2>Rules</h2>
-            <div class="sections">
-                <h3 class="title_rules">RULES OF PLAY & POLICIES</h3>
+            <div class="sections_and_img">
+                <div class="box_logo">
+                    <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
+                </div>
+                <h3 class="subtitle_rules">RULES OF PLAY & POLICIES</h3>
                 <section>
                     <h3>SPORTSMANSHIP</h3>
                     <p>
