--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <body>
         <h1>Mighty Ducks Hockey League</h1>
         <header class="headboard">
-            <figure>
-                <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
-            </figure>
             <nav>
                 <a class="browser1" href="#">Home</a>
                 <a class="browsers2y3" href="./about.html">About MDHL</a>
@@ -25,7 +22,10 @@
         </header>
         <main>
             <h2> Upcoming Events</h2>
-            <div class="sections">
+            <div class="sections_and_img">
+                <div class="box_logo">
+                    <img class="logo" src="./assets/img/LogoMightyDuck-01.png" alt="Logo">
+                </div>
                 <section>
                     <h3>August 4</h3>
                     <p>MDSL Fundraiser</p>
